--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,17 @@ repositories {
 }
 
 dependencies {
-    testImplementation(
-            'com.codeborne:selenide:6.14.0',
-            'com.github.javafaker:javafaker:1.0.2',
-            'org.junit.jupiter:junit-jupiter:5.9.3',
-            'org.slf4j:slf4j-simple:2.0.7'
-    )
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
+    testImplementation 'com.codeborne:selenide:6.15.0'
+    testImplementation 'com.codeborne:pdf-test:1.5.0'
+    testImplementation 'com.codeborne:xls-test:1.4.3'
+    testImplementation 'com.opencsv:opencsv:5.7.1'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.7'
 }
+
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
