--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ test {
     useJUnitPlatform()
 }
 
-task simple_test(type: Test) {
+task remote_test(type: Test) {
     useJUnitPlatform{
         includeTags("remote")
     }
