adding system properties

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
+}
+
 test {
     useJUnitPlatform()
 }
