--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
             'com.fasterxml.jackson.core:jackson-databind:2.12.7.1',
             'com.codeborne:pdf-test:1.5.0',
             'com.codeborne:xls-test:1.4.3',
-            'com.opencsv:opencsv:5.7.1'
+            'com.opencsv:opencsv:5.7.1',
+            'io.rest-assured:rest-assured:4.3.3'
     )
 }
 
