--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 plugins {
     id 'java-library'
     id 'io.qameta.allure' version '2.11.2'
+    id "io.freefair.lombok" version "6.0.0-m2"
 }
 
 repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.21.0"
+def restAssuredVersion = "5.3.1",
+        allureVersion = "2.23.0"
 
 allure {
     report {
@@ -34,7 +36,9 @@ dependencies {
             'com.codeborne:pdf-test:1.5.0',
             'com.codeborne:xls-test:1.4.3',
             'com.opencsv:opencsv:5.7.1',
-            'io.rest-assured:rest-assured:4.3.3'
+            "io.rest-assured:rest-assured:$restAssuredVersion",
+            "io.rest-assured:json-schema-validator:$restAssuredVersion",
+            "io.qameta.allure:allure-rest-assured:$allureVersion"
     )
 }
 
@@ -53,6 +57,6 @@ test {
 
 task remote_test(type: Test) {
     useJUnitPlatform{
-        includeTags("remote")
+        includeTags("remote", "remote_api")
     }
 }
