build.gradle fix

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,12 @@ test {
 
 task remote_test(type: Test) {
     useJUnitPlatform{
-        includeTags("remote", "remote_api")
+        includeTags("remote")
+    }
+}
+
+task remote_api(type: Test) {
+    useJUnitPlatform{
+        includeTags("remote_api")
     }
 }
